<resources>
    <string name="app_name">MyCheckins</string>
    <string name="record_title_hint">Enter a title for the record.</string>
    <string name="record_title_label">Title</string>
    <string name="record_details_label">Details</string>
    <string name="record_place_label">Place</string>
    <string name="record_place_hint">Enter a place for the record.</string>
    <string name="record_details_hint">Enter a details.</string>
    <string name="record_location_label">Location</string>
    <string name="new_record">New</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d records</string>
    <string name="date_picker_title">Date of record:</string>
    <string name="date_title">Date</string>
    <string name="map_button">Open Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="lat_name">Latitude:</string>
    <string name="lon_name">Longitude:</string>
    <string name="delete_button">Delete</string>
    <string name="share_button">Share</string>
</resources>
