<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/record_photo"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/record_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_title_label" />

            <EditText
                android:id="@+id/record_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/record_title_hint" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_details_label" />

    <EditText
        android:id="@+id/record_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_details_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_place_label"/>
    <EditText
        android:id="@+id/record_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_place_hint"/>

    <Button
        android:id="@+id/record_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/lat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_name" />

        <TextView
            android:id="@+id/lon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lon_name" />

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:onClick="sendMessage"
            android:scaleType="centerInside"
            android:text="@string/map_button" />

    </LinearLayout>

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_button" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />


</LinearLayout>